Added some security